# image-indexer

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  DEPLOYING_SERVER.md  DEPLOY_PRODUCTION.md  LOCAL.md  README.md  SETUP.md  TODO.md  VISION.md  main.py  pyproject.toml
.hermes/plans/: 2026-06-14_122000-agentic-cli.md
image_indexer/: __init__.py  cli.py  client.py  config.py  db.py  inference.py  preprocess.py  settings.toml  text_embed.py
image_indexer/migrations/: 0001_initial.sql  0002_add_tags.sql
scripts/: e2e_demo.py  e2e_real.py  reembed_db.py  test_hello_handler.py  test_production_worker.py  test_runpod_endpoint.sh
server/: .dockerignore  Dockerfile  inference_server.py
tests/: conftest.py  test_cli.py  test_client.py  test_db.py  test_handler.py  test_preprocess.py  test_text_embed.py  test_vlm_handler.py
worker/: Dockerfile  handler.py  production_handler.py
worker/hello/: Dockerfile  handler.py
